tools/openshift/demo/elasticsearch-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: google-assistant-demo
    component: elasticsearch
    role: data
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: google-assistant-demo
        component: elasticsearch
    spec:
      serviceAccountName: elasticsearch
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: google-assistant-demo
                  component: elasticsearch
                  role: data
      containers:
      - name: elasticsearch
        image: "docker.elastic.co/elasticsearch/elasticsearch:6.4.0"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 9200
          name: client
        resources:
            limits:
              cpu: "1"
            requests:
              cpu: 25m
              memory: 256m

        readinessProbe:
          httpGet:
            path: /_cluster/health?wait_for_status=yellow
            port: 9200
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /_cluster/health?wait_for_status=yellow
            port: 9200
          initialDelaySeconds: 90
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: data
        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          name: config
          subPath: elasticsearch.yml
        - mountPath: /usr/share/elasticsearch/config/logging.yml
          name: config
          subPath: logging.yml
      terminationGracePeriodSeconds: 3600
      volumes:
      - name: config
        configMap:
          name: google-assistant-demo-elasticsearch-config
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: google-assistant-demo
      annotations:
        volume.beta.kubernetes.io/storage-class: gp2
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 5Gi
