tools/openshift/demo/nuxeo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxeo
  labels:
    app: google-assistant-demo
    component: nuxeo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: google-assistant-demo
      component: nuxeo
  template:
    metadata:
      labels:
        app: google-assistant-demo
        component: nuxeo
    spec:
      containers:
        - name: nuxeo
          image: 'nuxeo/nuxeo:master'
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /nuxeo/runningstatus
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /nuxeo/runningstatus
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /binaries
              name: binaries
            - mountPath: /docker-entrypoint-initnuxeo.d
              name: nuxeo-config              
            - mountPath: /opt/nuxeo/connect/
              name: nuxeo-connect
      volumes:
        - name: binaries
          persistentVolumeClaim:
            claimName: nuxeo-binaries
        - name: nuxeo-config
          configMap:
            name: nuxeo-config
            defaultMode: 420
        - name: nuxeo-connect
          secret:
            secretName: nuxeo-connect
            defaultMode: 420
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
