tools/openshift/demo/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: google-assistant-demo
    component: elasticsearch
    role: client
  name: elasticsearch
spec:
  ports:
    - name: client
      port: 9200
      targetPort: client
  selector:
    app: google-assistant-demo
    component: elasticsearch
  type: ClusterIP
